--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,18 @@
 plugins {
     id 'java'
-    id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 group 'xss.it.icons'
-version '1.0'
 
+allprojects {
+    version = '1.0.0'
+}
+
+subprojects {
+    repositories {
+        mavenCentral()
+    }
+}
 repositories {
     mavenCentral()
-}
-
-
-sourceCompatibility = '17'
-
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-}
-
-
-javafx {
-    version = '17.0.1'
-    modules = ['javafx.controls', 'javafx.fxml','javafx.graphics']
-}
-
-dependencies {
-
-}
-
-jar{
-    baseName='javafx.icons'
 }
