--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -28,5 +28,5 @@ javafx {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: '../libs')
-    //implementation project(':pdf-view')
+    implementation project(':icons')
 }
